syntax = "proto3";
option go_package = "github.com/shishir9159/kapetanios/proto";

message PrerequisiteRollback {
  bool backupExists = 1;
  bool spaceAvailability = 2;
  string err = 3;
}

message RollbackStatus {
  bool prerequisiteCheckSuccess = 1;
  bool rollbackSuccess = 2;
  bool restartSuccess = 3;
  uint32 retryAttempt = 4;
  string log = 5;
  string err = 6;
}

message CreateResponse {
  bool proceedNextStep = 1;
  bool skipRetryCurrentStep = 2;
  bool terminateApplication = 3;
}

service Rollback {
  rpc Prerequisite(PrerequisiteRollback) returns (CreateResponse);
  rpc RollbackUpdate(RollbackStatus) returns (CreateResponse);
}